# SAMURAI-KOKKOS-Expermients

./: CMakeLists.txt  README.md  project.py
benchmarks/: CMakeLists.txt
benchmarks/src/: benchmark_axpy.cpp  benchmark_axpy2.cpp  benchmark_projection.cpp
conda/: environment.yml
include/: csr_matrix.hpp  samurai_kokkos_all_offsets_environment.hpp  samurai_kokkos_environment.hpp  samurai_kokkos_scope.hpp  samurai_nd_kokkos_environment.hpp  sp_mat_entry.hpp  utils.hpp  zip_rda_iterator.hpp  zip_reference.hpp
src/: csr_matrix.cpp  main.cpp  samurai_kokkos_all_offsets_environment.cpp  samurai_kokkos_environment.cpp
